Select And Note

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         <div class="box" id="check"></div>
         <div class="box" id="opa"></div>
         <div class="box" id="input"></div>
+        <div class="box" id="select"></div>
     </body>
 </html>
