--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
         <div class="box" id="opa"></div>
         <div class="box" id="input"></div>
         <div class="box" id="select"></div>
+        <div class="box" id="movie"></div>
     </body>
 </html>
